--- a/index.html
+++ b/index.html
@@ -21,5 +21,34 @@
         </div>
       </div>
     </div>
+    <div class="container-2">
+      <h2 class="educat">Education</h2>
+      <div class="container education">
+        <div class="secondary">
+          <img src="./image.png" class="vb" />
+          <ul class="edu">
+            <li>Viswabharati School</li>
+            <li>Olyampiad level student</li>
+            <li>600/600 Marks int SSC</li>
+            <li>10 CGPA</li>
+          </ul>
+        </div>
+        <div class="inter">
+          <img src="./sri chaitanya_v.PNG" class="sc" />
+          <ul class="edu">
+            <li>Sri Chaitanya College</li>
+            <li>976/100 Marks in Inter</li>
+            <li>JEE Mains 95.3 Percentail</li>
+            <li>15000 All India Rank</li>
+          </ul>
+        </div>
+        <div class="btech">
+          <img src="./vit.jpeg" class="vit" />
+          <ul class="edu">
+            <li>Vellore Institute of Technology</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
