--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h2 class="educat">Education</h2>
       <div class="container education">
         <div class="secondary">
-          <img src="./image.png" class="vb" />
+          <img src="https://github.com/JayaVishal23/SELF_WEBSITE/blob/main/image.png?raw=true" class="vb" />
           <ul class="edu">
             <li>Viswabharati School</li>
             <li>Olyampiad level student</li>
