--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </ul>
         </div>
         <div class="inter">
-          <img src="./sri chaitanya_v.PNG" class="sc" />
+          <img src="https://github.com/JayaVishal23/SELF_WEBSITE/blob/main/sri%20chaitanya_v.PNG?raw=true" class="sc" />
           <ul class="edu">
             <li>Sri Chaitanya College</li>
             <li>976/100 Marks in Inter</li>
@@ -43,7 +43,7 @@
           </ul>
         </div>
         <div class="btech">
-          <img src="./vit.jpeg" class="vit" />
+          <img src="https://github.com/JayaVishal23/SELF_WEBSITE/blob/main/vit.jpeg?raw=true" class="vit" />
           <ul class="edu">
             <li>Vellore Institute of Technology</li>
           </ul>
